--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <br>
     <br>
-    <img id="b" src="burger.jfif">
+    <img id="b" src="download.jpg">
     <span><img id="p" src="pizza.jfif"></span>
 </body>
 
